# feelinq

./: .env.example  .gitignore  Containerfile  README.md  migrate_from_influx.py  pyproject.toml
docs/: architecture.md  concept.md  migration.md
feelinq/: config.py  main.py
feelinq/core/: admin.py  emotions.py  entry_handler.py  i18n.py  scheduler.py  stats_engine.py
feelinq/db/: influx.py  postgres.py  timescale.py
feelinq/locales/: en.json  ru.json
planning/: bot_idea.md  technical_architechture.md
quadlet/: feelinq.container  influxdb.container  postgres.container
scripts/: migrate_from_influx.py
