[project]
name = "feelinq"
version = "0.1.0"
description = "Mood tracking bot based on the Russell circumplex model of affect"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.30.0",
    "influxdb3-python>=1.0.0",
    "apscheduler>=3.10,<4",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[project.scripts]
feelinq = "feelinq.main:main"
