[project]
name = "feelinq"
version = "0.1.0"
description = "Mood tracking bot based on the Russell circumplex model of affect"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "july>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
feelinq = "feelinq.main:main"
